--- a/style.css
+++ b/style.css
@@ -1,110 +1,597 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+@font-face {
+    font-family: 'Comfortaa';
+    font-display: swap;
+    src: url("style/Comfortaa/Comfortaa-VariableFont_wght.ttf");
+    src: local("O"), url("style/Comfortaa/Comfortaa-VariableFont_wght.ttf") format("truetype"), 
+        url("style/Comfortaa/Comfortaa-VariableFont_wght.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
   }
   
-  body {
-    font-family: Arial, Helvetica, sans-serif;
+  
+  *{
+    margin: 0;
+    padding: 0;
+  }
+  .menu{
+    background: #F39C12;
+    position: fixed;
+    width: 100%;
+  }
+  .menu a{
+    text-decoration: none;
+  }
+  .menu nav{
+    position: relative;
+    display: flex;
+    margin: 0 auto;
+    height: 70px;
+    align-items: center;
+    justify-content: space-between;
+  }
+  nav .content{
+    display: flex;
+  }
+  nav .content .links{
+    margin-left: 80px;
+    display: flex;
+  }
+  .logph{
+      width: 70px;
+      height: 50px;
+      margin-left: 350px;
+      margin-top: 10px;
+  }
+  .content .links li{
+    list-style: none;
+    line-height: 70px;
+  }
+  .content .links li a,
+  .content .links li label{
+    color: #fff;
     font-size: 20px;
-    background-color: #fff;
-    color: #333;
+    font-weight: 500;
+    padding: 9px 17px;
+    border-radius: 5px;
+    font-family: "Comfortaa";
+    transition: all 0.3s ease;
+  }
+  .content .links li label{
+    display: none;
+  }
+  .content .links .hover:hover{
+      text-decoration: line-through;
+      transition: 10s ease-in-out;
+  }
+  .menu .menu-icon{
+    display: none;
+  }
+  .menu input[type="checkbox"]{
+    display: none;
+  }
+  .content .links ul{
+    position: absolute;
+    background: #f39c12;
+    z-index: -1;
+    opacity: 0;
+    visibility: hidden;
+  }
+  .content .links li:hover > ul{
+    top: 70px;
+    opacity: 1;
+    visibility: visible;
+    transition: all 0.3s ease;
+  }
+  .content .links ul li a{
+    display: block;
+    width: 100%;
+    line-height: 30px;
+    border-radius: 0px !important;
+  }
+  .content .links ul li a:hover{
+    color: rgb(233, 30, 99);
+    background-color: white;
+  }
+  
+  .text1{ 
+    padding-bottom: 35px;
+    padding-top: 35px;
+    padding-left: 335px;
+      display: flex;
+      justify-content: space-around;
+      width: 1102px;
+      left: 112px;
+      top: 500px;
+      font-size: 35px;
+      line-height: 45px;
+      color: #000000;
+  }
+  
+  .text2{ 
+    padding-bottom:35px;
+    padding-top: 35px;
+    padding-left: 335px;
+    display: flex;
+    justify-content: space-around;
+    width: 1102px;
+    left: 112px;
+    top: 500px;
+    font-size: 35px;
+    line-height: 45px;
+    color: #000000;
+  }
+  .text31{ 
+    padding-left: 335px;
+    display: flex;
+    justify-content: space-around;
+    width: 1102px;
+    left: 112px;
+    top: 500px;
+    font-size: 35px;
+    line-height: 45px;
+    color: #000000;
+  }
+  .text13{ 
+    padding-left: 335px;
+    display: flex;
+    justify-content: space-around;
+    width: 1102px;
+    left: 112px;
+    top: 500px;
+    font-size: 35px;
+    line-height: 45px;
+    color: #000000;
+  }
+  .page{
+  display:flex;
+  justify-content:space-around;
+  text-decoration:none;
+  color:#000;
+  font-size:35px;
+  }
+  .page:hover{
+  color:#F39C12;
+  }
+  
+/* content*/
+@import url(https://fonts.googleapis.com/css?family=Khula:700);
+
+.hidden {
+  opacity:0;
+  
+}
+.console-container {
+  
+  font-family:Khula;
+  font-size:4em;
+  text-align:center;
+  height:200px;
+  width:600px;
+  display:block;
+  color:white;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+  margin:auto;
+}
+.console-underscore {
+   display:inline-block;
+  position:relative;
+  top:-0.14em;
+  left:10px;
+  margin-top: 150px;
+}
+
+.block3{ 
+  background-color:#FF9933;
+ text-align: center;
+}
+.gal2:hover~.gal1{ 
+  margin-bottom: 100px;
+  transition: 0.3s;
+}
+
+.gal1{ 
+  margin-left: 285px;
+  margin-top: 250px;
+  margin-right: -500px;
+  height:150px;
+  width:150px;
+  margin-bottom:-100px;
+}
+.gal2{
+  border-radius: 50%;
+  margin-left: 30%;
+}
+
+.gal3{ 
+margin-right: 50px;
+margin-top: 300px;
+height: 150px;
+width: 150px;
+margin-bottom: 100px;
+}
+.img1{ 
+  width:150px;
+  height:150px;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-family: "Merriweather", serif;
+  height: 100vh;
+}
+
+header h2 {
+  font-weight: 400;
+}
+
+.scroll-container {
+  height: 100vh;
+  min-height: 450px;
+  padding: 2rem 1rem;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+}
+
+.scroll-container:nth-of-type(even) {
+  flex-direction: row-reverse;
+}
+
+.scroll-element,
+.scroll-caption {
+  width: 50%;
+}
+
+.scroll-caption {
+  margin: 1rem;
+}
+
+@media screen and (max-width: 650px) {
+  .scroll-container,
+  .scroll-container:nth-of-type(even) {
+    flex-direction: column;
+    align-content: inherit;
   }
 
-  .photo{ 
-       bottom: 20px;
-    right: 10px;
-      width: 40px;
-      height: 40px
+  .scroll-element {
+    height: 100%;
   }
-  #back-to-top-btn {
-    display: none;
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    font-size: 26px;
+
+  .scroll-element,
+  .scroll-caption {
+    width: 100%;
+  }
+}
+
+.js-scroll {
+  opacity: 0;
+  transition: opacity 500ms;
+}
+
+.js-scroll.scrolled {
+  opacity: 1;
+}
+
+.scrolled.fade-in {
+  animation: fade-in 1s ease-in-out both;
+}
+
+.scrolled.fade-in-bottom {
+  animation: fade-in-bottom 1s ease-in-out both;
+}
+
+.scrolled.slide-left {
+  animation: slide-in-left 1s ease-in-out both;
+}
+
+.scrolled.slide-right {
+  animation: slide-in-right 1s ease-in-out both;
+}
+
+@keyframes slide-in-left {
+  0% {
+    -webkit-transform: translateX(-100px);
+    transform: translateX(-100px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slide-in-right {
+  0% {
+    -webkit-transform: translateX(100px);
+    transform: translateX(100px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes fade-in-bottom {
+  0% {
+    -webkit-transform: translateY(50px);
+    transform: translateY(50px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+  /*footer start*/
+  footer {
+    background-color: #282323;
+    height: 500px;
+    margin-top: 470px;
+    position: absolute;
+    width: 1700px;
+  }
+  footer .block_img img {
+    margin-left: 40px;
+    height: 90px;
+    margin-top: 200px;
+  }
+  footer .text .block_menu {
+    margin-left: 200px;
+    font-family: "Open_Sans";
+    margin-top: -260px;
+    text-shadow: 0 0 10px #FF8C00, 0 0 20px #FF8C00, 0 0 40px #FF8C00, 0 0 80px #FF8C00, 0 0 120px #FF8C00;
+  }
+  footer .text .block_menu li {
+    display: inline;
+    font-size: 40px;
+  }
+  footer .text .block_menu li .help {
+    padding-right: 220px;
+  }
+  footer .text .block_menu li .contacts {
+    padding-left: 160px;
+    padding-right: 200px;
+  }
+  footer .text .block_menu li a {
+    text-decoration: none;
+    color: white;
+  }
+  footer .text .block_for_help {
+    margin-left: 200px;
+    margin-top: 50px;
+    font-family: "Raleway";
+    font-size: 18px;
+  }
+  footer .text .block_for_help li {
+    list-style-type: none;
+    padding-bottom: 30px;
+  }
+  footer .text .block_for_help a {
+    text-decoration: none;
+    color: white;
+    transition: margin-left 1s;
+  }
+  footer .text .block_for_help a:hover {
+    color: #ff8c00;
+    margin-left: 20px;
+    transition: margin-left 1s;
+  }
+  footer .text .block_for_menu {
+    margin-left: 590px;
+    margin-top: -360px;
+    font-family: "Raleway";
+    font-size: 20px;
+  }
+  footer .text .block_for_menu li {
+    list-style-type: none;
+    padding-bottom: 30px;
+  }
+  footer .text .block_for_menu a {
+    text-decoration: none;
+    color: white;
+    transition: margin-left 1s;
+  }
+  footer .text .block_for_menu a:hover {
+    color: #ff8c00;
+    margin-left: 20px;
+    transition: margin-left 1s;
+  }
+  footer .text .block_for_adress .adress {
+    color: white;
+    font-family: "Raleway";
+    font-size: 25px;
+    margin-left: 830px;
+    margin-top: -320px;
+  }
+  footer .text .block_for_adress .adress a {
+    text-decoration: none;
+    color: white;
+    transition: margin-left 1s;
+  }
+  footer .text .block_for_adress .adress a:hover {
+    color: #ff8c00;
+    margin-left: 20px;
+    transition: margin-left 1s;
+  }
+  footer .text .block_for_adress .amail {
+    margin-top: 30px;
+    font-family: "Raleway";
+    font-size: 25px;
+    margin-left: 899px;
+  }
+  footer .text .block_for_adress .amail a {
+    text-decoration: none;
+    transition: margin-left 1s;
+  }
+  footer .text .block_for_adress .amail a:hover {
+    color: #ff8c00;
+    margin-left: 20px;
+    transition: margin-left 1s;
+  }
+  footer .text .block_with_img_link {
+    width: 200px;
+  }
+  footer .text .block_with_img_link .instagram {
     width: 50px;
+    margin-left: 920px;
+    margin-top: 50px;
+    margin-right: 20px;
+    position: absolute;
+  }
+  footer .text .block_with_img_link .facebook {
+    width: 50px;
+    margin-left: 1010px;
+    margin-top: 50px;
+    position: absolute;
+  }
+  footer .text .block_with_img_link .telega {
+    width: 50px;
+    position: absolute;
+    margin-top: 50px;
+    margin-left: 1090px;
+  }
+  footer .text .block_with_img_link .gmail_youtube .gmail {
+    width: 110px;
+    margin-top: 120px;
+    margin-left: 934px;
+    position: absolute;
+  }
+  footer .text .block_with_img_link .gmail_youtube .youtube {
+    width: 80px;
+    position: absolute;
+    margin-top: 125px;
+    margin-left: 1040px;
+  }
+  footer .text .block_with_img {
+    position: absolute;
+    width: 200px;
+  }
+  footer .text .block_with_img .Uk {
+    margin-left: 1410px;
+    margin-top: -90px;
+  }
+  footer .text .block_with_img .Uk .uk {
+    width: 80px;
+  }
+  footer .text .block_with_img .Ra {
+    margin-left: 1410px;
+    margin-top: 20px;
+  }
+  footer .text .block_with_img .Ra .ra {
+    width: 80px;
+  }
+  footer .text .block_with_img .Usa {
+    margin-left: 1410px;
+    margin-top: 20px;
+  }
+  footer .text .block_with_img .Usa .usa {
+    width: 80px;
+  }
+  footer .text .block_with_img .Fr {
+    margin-left: 1410px;
+    margin-top: 20px;
+  }
+  footer .text .block_with_img .Fr .fr {
+    width: 80px;
+  }
+  footer .text .block_with_img .Ch {
+    margin-left: 1410px;
+    margin-top: 20px;
+  }
+  footer .text .block_with_img .Ch .ch {
+    width: 80px;
+    z-index: 10;
+    position: absolute;
+  }
+  footer .line_1 {
+    z-index: 0;
+    width: 0px;
+    height: 0px;
+    border-left: 70px solid transparent;
+    border-right: 70px solid transparent;
+    border-top: 160px solid #282323;
+    margin-left: 1560px;
+    margin-top: 270px;
+  }
+  footer .line_2 {
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    border-left: 150px solid transparent;
+    border-right: 150px solid transparent;
+    border-top: 100px solid #282323;
+    margin-left: 1310px;
+    margin-top: -170px;
+  }
+  footer .block_about_cite {
+    margin-top: -100px;
+    position: absolute;
+  }
+  footer .block_about_cite p {
+    font-size: 35px;
+    margin-left: 50px;
+    font-family: "Poiret_One";
+  }
+  footer .block_about_cite .insta {
+    margin-left: 350px;
+    position: absolute;
+  }
+  footer .block_about_cite .insta img {
     height: 50px;
-    background-color: #fff;
-    color: #333;
-    cursor: pointer;
-    outline: none;
-    border: 3px solid #333;
-    border-radius: 50%;
-    transition-duration: 0.2s;
-    transition-timing-function: ease-in-out;
-    transition-property: background-color, color;
+    margin-top: -50px;
   }
-  #back-to-top-btn:hover, #back-to-top-btn:focus {
-    background-color: #333;
-    color: #fff;  
+  footer .block_about_cite .telega_oleksandr {
+    margin-left: 430px;
+    position: absolute;
   }
-  
-  @media(max-width: 992px) {
-    .container { padding: 20px 100px; }
-    #back-to-top-btn { font-size: 22px; width: 40px; height: 40px; bottom: 15px; right: 15px; }
+  footer .block_about_cite .telega_oleksandr img {
+    height: 50px;
+    margin-top: -55px;
   }
-  @media(max-width:768px) {
-    body { font-size: 16px; }
-    .container { padding: 10px 50px; }
-    h1 { font-size: 26px; }
-    h2 { font-size: 22px; }
-    hr { margin: 30px 0; }
-    #back-to-top-btn { font-size: 18px; width: 32px; height: 32px; bottom: 6px; right: 6px; }
+  footer .block_about_cite .telega_Aahzmandiuss {
+    position: absolute;
+    margin-left: 510px;
   }
-  
-  /* Animations */
-  .btnEntrance {
-    animation-duration: 0.5s;
-    animation-fill-mode: both;
-    animation-name: btnEntrance;
+  footer .block_about_cite .telega_Aahzmandiuss img {
+    height: 50px;
+    margin-top: -55px;
   }
-  /* zoomIn */
-  /* @keyframes btnEntrance { 
-    from {
-      opacity: 0;
-      transform: scale3d(0.3, 0.3, 0.3);
-    }
-    to {
-      opacity: 1;
-    }    
-  } */
-  
-  /* fadeInUp */
-  @keyframes btnEntrance {
-    from {
-      opacity: 0;
-      transform: translate3d(0, 100%, 0);
-    }
-    to {
-      opacity: 1;
-      transform: translate3d(0, 0, 0);
-    }
+  footer .block_about_cite .telega_Dana {
+    position: absolute;
+    margin-left: 590px;
   }
-  
-  .btnExit {
-    animation-duration: 0.25s;
-    animation-fill-mode: both;  
-    animation-name: btnExit;
+  footer .block_about_cite .telega_Dana img {
+    height: 50px;
+    margin-top: -55px;
   }
-  /* zoomOut */
-  /* @keyframes btnExit {
-    from {
-      opacity: 1;
-    }
-    to {
-      opacity: 0;
-      transform: scale3d(0.3, 0.3, 0.3);
-    }
-  } */
-  
-  /* fadeOutDown */
-  @keyframes btnExit {
-    from {
-      opacity: 1;
-    }
-    to {
-      opacity: 0;
-      transform: translate3d(0, 100%, 0);
-    }
+  footer .arrow {
+    position: absolute;
+    z-index: 0;
+  }
+  footer .arrow img {
+    margin-top: -150px;
+    height: 80px;
+    position: absolute;
+    margin-left: 1600px;
   }
