--- a/About us.css
+++ b/About us.css
@@ -104,6 +104,8 @@
   position: fixed;
   width: 100%;
   z-index: 1000;
+  -webkit-user-select: none;
+          user-select: none;
 }
 
 .menu a {
@@ -285,9 +287,9 @@ header .p .p_3 {
   font-size: 40px;
   z-index: 17;
   font-family: "Bad_Script";
-  width: 700px;
+  width: 890px;
   margin-top: 2630px;
-  margin-left: 300px;
+  margin-left: 170px;
 }
 
 .demo {
@@ -1065,6 +1067,7 @@ main .second_block .info_block .img_1:hover ~ .name_eighth .new {
   text-align: center;
   padding: 10px 5px 10px 5px;
   transform: rotate(-90deg);
+  user-select: none;
   -webkit-touch-callout: none;
   /* iOS Safari */
   -webkit-user-select: none;
@@ -1087,6 +1090,10 @@ main .second_block .info_block .img_1:hover ~ .name_eighth .new {
   position: absolute;
 }
 
+.y-1 {
+  -webkit-user-select: none;
+          user-select: none;
+}
 .y-1 .y-1-1 {
   position: absolute;
   margin-top: 2150px;
@@ -1102,6 +1109,10 @@ main .second_block .info_block .img_1:hover ~ .name_eighth .new {
   height: 100px;
 }
 
+.y-2 {
+  -webkit-user-select: none;
+          user-select: none;
+}
 .y-2 .y-2-1 {
   position: absolute;
   margin-top: 2360px;
@@ -1185,7 +1196,7 @@ main .second_block .info_block .img_1:hover ~ .name_eighth .new {
   font-size: 30px;
   color: white;
   position: absolute;
-  margin-left: 270px;
+  margin-left: 230px;
   margin-top: 50px;
 }
 .orange_block .second_orange_block .p2_ob_two {
@@ -1195,7 +1206,7 @@ main .second_block .info_block .img_1:hover ~ .name_eighth .new {
   color: white;
   position: absolute;
   margin-top: 50px;
-  margin-left: 400px;
+  margin-left: 310px;
 }
 .orange_block .second_orange_block .p2_ob_three {
   letter-spacing: -4px;
@@ -1204,7 +1215,7 @@ main .second_block .info_block .img_1:hover ~ .name_eighth .new {
   color: white;
   position: absolute;
   margin-top: 50px;
-  margin-left: 580px;
+  margin-left: 390px;
 }
 .orange_block .second_orange_block .p2_ob_four {
   letter-spacing: -4px;
@@ -1213,7 +1224,7 @@ main .second_block .info_block .img_1:hover ~ .name_eighth .new {
   color: white;
   position: absolute;
   margin-top: 50px;
-  margin-left: 730px;
+  margin-left: 500px;
 }
 .orange_block .second_orange_block .p2_ob_five {
   letter-spacing: -3px;
@@ -1222,7 +1233,7 @@ main .second_block .info_block .img_1:hover ~ .name_eighth .new {
   color: white;
   position: absolute;
   margin-top: 50px;
-  margin-left: 880px;
+  margin-left: 560px;
 }
 .orange_block .img_ob img {
   position: absolute;
@@ -1487,6 +1498,8 @@ main .second_block .info_block .img_1:hover ~ .name_eighth .new {
 }
 
 .last_block_with_voloters {
+  -webkit-user-select: none;
+          user-select: none;
   /*first_people_end*/
   /*second_end*/
   /*third_end*/
@@ -1778,7 +1791,7 @@ main .second_block .info_block .img_1:hover ~ .name_eighth .new {
   text-align: center;
   position: absolute;
   font-size: 50px;
-  margin-left: 500px;
+  margin-left: 610px;
   margin-top: 50px;
   font-family: "Train_One";
 }
@@ -2262,9 +2275,11 @@ main .second_block .info_block .img_1:hover ~ .name_eighth .new {
 footer {
   background-color: #282323;
   height: 500px;
-  margin-top: 6690px;
+  margin-top: 6680px;
   position: absolute;
   width: 1688px;
+  -webkit-user-select: none;
+          user-select: none;
 }
 
 footer .block_img img {
@@ -2289,9 +2304,16 @@ footer .text .block_menu li .help {
   padding-right: 220px;
 }
 
+footer .text .block_menu li .menu1 {
+  padding-left: 90px;
+}
+
 footer .text .block_menu li .contacts {
-  padding-left: 160px;
-  padding-right: 200px;
+  padding-left: 150px;
+}
+
+footer .text .block_menu li .languages {
+  padding-left: 120px;
 }
 
 footer .text .block_menu li a {
@@ -2324,7 +2346,7 @@ footer .text .block_for_help a:hover {
 }
 
 footer .text .block_for_menu {
-  margin-left: 590px;
+  margin-left: 615px;
   margin-top: -360px;
   font-family: "Raleway";
   font-size: 20px;
@@ -2351,7 +2373,7 @@ footer .text .block_for_adress .adress {
   color: white;
   font-family: "Raleway";
   font-size: 25px;
-  margin-left: 830px;
+  margin-left: 855px;
   margin-top: -320px;
 }
 
@@ -2370,7 +2392,7 @@ footer .text .block_for_adress .amail {
   margin-top: 30px;
   font-family: "Raleway";
   font-size: 25px;
-  margin-left: 899px;
+  margin-left: 925px;
 }
 
 footer .text .block_for_adress .amail a {
@@ -2391,7 +2413,7 @@ footer .text .block_with_img_link {
 
 footer .text .block_with_img_link .instagram {
   width: 50px;
-  margin-left: 920px;
+  margin-left: 930px;
   margin-top: 50px;
   margin-right: 20px;
   position: absolute;
@@ -2399,7 +2421,7 @@ footer .text .block_with_img_link .instagram {
 
 footer .text .block_with_img_link .facebook {
   width: 50px;
-  margin-left: 1010px;
+  margin-left: 1025px;
   margin-top: 50px;
   position: absolute;
 }
@@ -2408,13 +2430,13 @@ footer .text .block_with_img_link .telega {
   width: 50px;
   position: absolute;
   margin-top: 50px;
-  margin-left: 1090px;
+  margin-left: 1105px;
 }
 
 footer .text .block_with_img_link .gmail_youtube .gmail {
   width: 110px;
   margin-top: 120px;
-  margin-left: 934px;
+  margin-left: 945px;
   position: absolute;
 }
 
@@ -2422,7 +2444,7 @@ footer .text .block_with_img_link .gmail_youtube .youtube {
   width: 80px;
   position: absolute;
   margin-top: 125px;
-  margin-left: 1040px;
+  margin-left: 1055px;
 }
 
 footer .text .block_with_img {
@@ -2560,7 +2582,7 @@ footer .back-to-top-btn:focus {
   border: none;
 }
 
-footer .back-to-top-btn img {
+footer .back-to-top-btn .photo {
   margin-top: -150px;
   height: 80px;
   position: absolute;
