--- a/About us.scss
+++ b/About us.scss
@@ -120,6 +120,7 @@
   position: fixed;
   width: 100%;
   z-index: 1000;
+  user-select: none;
 }
 .menu a{
   text-decoration: none;
@@ -315,9 +316,9 @@ header{
       font-size: 40px;
       z-index: 17;
       font-family: 'Bad_Script';
-      width: 700px;
+      width: 890px;
       margin-top:  2630px;
-      margin-left: 300px;
+      margin-left: 170px;
     }
     .demo{
       display: none;
@@ -1167,6 +1168,7 @@ main{
   text-align: center;
   padding: 10px 5px 10px 5px;
   transform: rotate(-90deg);
+  user-select: none;
   -webkit-touch-callout: none;
   /* iOS Safari */
   -webkit-user-select: none;
@@ -1188,6 +1190,7 @@ main{
   position: absolute;
 }
 .y-1{
+  user-select: none;
   .y-1-1{
     position: absolute;
     margin-top:  2150px;
@@ -1204,6 +1207,7 @@ main{
   }
 }
 .y-2{
+  user-select: none;
   .y-2-1{
     position: absolute;
     margin-top:  2360px;
@@ -1324,7 +1328,7 @@ main{
         font-size: 30px;
         color: white;
         position: absolute;
-        margin-left: 270px;
+        margin-left: 230px;
         margin-top: 50px;
     }
     .p2_ob_two{
@@ -1334,7 +1338,7 @@ main{
         color: white;
         position: absolute;
         margin-top: 50px;
-        margin-left: 400px;
+        margin-left: 310px;
     }
     .p2_ob_three{
         letter-spacing: -4px;
@@ -1343,7 +1347,7 @@ main{
         color: white;
         position: absolute;
         margin-top: 50px;
-        margin-left: 580px;
+        margin-left: 390px;
     }
     .p2_ob_four{
         letter-spacing: -4px;
@@ -1352,7 +1356,7 @@ main{
         color: white;
         position: absolute;
         margin-top: 50px;
-        margin-left: 730px;
+        margin-left: 500px;
     }
     .p2_ob_five{
         letter-spacing: -3px;
@@ -1361,7 +1365,7 @@ main{
         color: white;
         position: absolute;
         margin-top: 50px;
-        margin-left: 880px;
+        margin-left: 560px;
     }
   }
 
@@ -1668,6 +1672,7 @@ main{
 
 
   .last_block_with_voloters{
+    user-select: none;
     .start{
       position: absolute;
       margin-top:  4900px;
@@ -1982,7 +1987,7 @@ main{
     text-align: center;
     position: absolute;
     font-size: 50px;
-    margin-left: 500px;
+    margin-left: 610px;
     margin-top: 50px;
     font-family: 'Train_One';
   }
@@ -2796,9 +2801,10 @@ main{
 footer {
   background-color: #282323;
   height: 500px;
-  margin-top: 6690px;
+  margin-top: 6680px;
   position: absolute;
   width: 1688px;
+  user-select: none;
 }
 footer .block_img img {
   margin-left: 40px;
@@ -2818,9 +2824,14 @@ footer .text .block_menu li {
 footer .text .block_menu li .help {
   padding-right: 220px;
 }
+footer .text .block_menu li .menu1 {
+  padding-left: 90px;
+}
 footer .text .block_menu li .contacts {
-  padding-left: 160px;
-  padding-right: 200px;
+  padding-left: 150px;
+}
+footer .text .block_menu li .languages {
+  padding-left: 120px;
 }
 footer .text .block_menu li a {
   text-decoration: none;
@@ -2847,7 +2858,7 @@ footer .text .block_for_help a:hover {
   transition: margin-left 1s;
 }
 footer .text .block_for_menu {
-  margin-left: 590px;
+  margin-left: 615px;
   margin-top: -360px;
   font-family: "Raleway";
   font-size: 20px;
@@ -2870,7 +2881,7 @@ footer .text .block_for_adress .adress {
   color: white;
   font-family: "Raleway";
   font-size: 25px;
-  margin-left: 830px;
+  margin-left: 855px;
   margin-top: -320px;
 }
 footer .text .block_for_adress .adress a {
@@ -2886,7 +2897,7 @@ footer .text .block_for_adress .amail {
   margin-top: 30px;
   font-family: "Raleway";
   font-size: 25px;
-  margin-left: 899px;
+  margin-left: 925px;
 }
 footer .text .block_for_adress .amail a {
   text-decoration: none;
@@ -2903,14 +2914,14 @@ footer .text .block_with_img_link {
 }
 footer .text .block_with_img_link .instagram {
   width: 50px;
-  margin-left: 920px;
+  margin-left: 930px;
   margin-top: 50px;
   margin-right: 20px;
   position: absolute;
 }
 footer .text .block_with_img_link .facebook {
   width: 50px;
-  margin-left: 1010px;
+  margin-left: 1025px;
   margin-top: 50px;
   position: absolute;
 }
@@ -2918,19 +2929,19 @@ footer .text .block_with_img_link .telega {
   width: 50px;
   position: absolute;
   margin-top: 50px;
-  margin-left: 1090px;
+  margin-left: 1105px;
 }
 footer .text .block_with_img_link .gmail_youtube .gmail {
   width: 110px;
   margin-top: 120px;
-  margin-left: 934px;
+  margin-left: 945px;
   position: absolute;
 }
 footer .text .block_with_img_link .gmail_youtube .youtube {
   width: 80px;
   position: absolute;
   margin-top: 125px;
-  margin-left: 1040px;
+  margin-left: 1055px;
 }
 footer .text .block_with_img {
   position: absolute;
@@ -3042,7 +3053,7 @@ footer .back-to-top-btn{
 footer .back-to-top-btn:focus{
   border: none;
 }
-footer .back-to-top-btn img {
+footer .back-to-top-btn .photo{
   margin-top: -150px;
   height: 80px;
   position: absolute;
