--- a/Game-eng/game-5/styles.css
+++ b/Game-eng/game-5/styles.css
@@ -2,39 +2,71 @@ html {
 background-image: linear-gradient(to left bottom, #8fcbca, #88c3c9, #83bac7, #80b2c3, #7ea9bf, #7ba9bf, #77aabe, #74aabd, #70b3bd, #73bbb9, #7dc3b1, #8ec9a8);
  }
  canvas {
-    margin: auto;
     box-shadow: 0 0  20px 10px #234662;
     border-radius: 10px;
   }
-.btn-back {
-  position: absolute;
-  top: 50px;
-  background-color: #FEC75E;
-  padding: 20px;
-  border: 2px solid #000;
-  border-radius: 10px;
-  font-family: 'DotGothic16', sans-serif;
-  font-size: 15px;
-}
-.btn-back-wrapper {
-  display: flex;
+  .row1{
+    display: flex;
   justify-content: flex-start;
-}
-.btn-next-wrapper {
-  display: flex;
-  justify-content: flex-end;
 
-}
-.btn-next{
-  position: absolute;
-  top: 50px;
-  background-color: #FEC75E;
-  padding: 20px;
-  /* border: 2px solid #000; */
-  border-radius: 10px;
-  font-family: 'DotGothic16', sans-serif;
-  font-size: 15px;
-}
+  }
+  .row1-wrap{
+    position: absolute;
+      height: 95%;
+    width: 20%;
+  }
+  .row2{
+    display: flex;
+    justify-content: flex-end;
+  }
+  .row2-wrap{
+    position: absolute;
+      height: 95%;
+    width: 20%;
+  }
+  @media (min-height: 800px) {
+    .btn-next, .btn-back {
+      max-height: 80%;
+    }
+  }
+
+  .btn-back {
+    background-color: #FEC75E;
+        padding: 20px;
+        border: 2px solid #000;
+        border-radius: 10px;
+        font-family: 'DotGothic16', sans-serif;
+        font-size: 10pt;
+        max-width: 90%;
+        height: 100%;
+  }
+  .btn-back-wrapper {
+    display: flex;
+    justify-content: center;
+    height: 12%;
+    width: 100%;
+    position: absolute;
+    top: 1%
+  }
+  .btn-next-wrapper {
+    display: flex;
+    justify-content: center;
+    height: 12%;
+    width: 100%;
+    position: absolute;
+    top: 1%
+  }
+  .btn-next{
+    background-color: #FEC75E;
+        padding: 20px;
+        border: 2px solid #000;
+        border-radius: 10px;
+        font-family: 'DotGothic16', sans-serif;
+        font-size: 10pt;
+        max-width: 90%;
+        height: 100%;
+  }
+
 
 
 .container {
@@ -43,25 +75,27 @@ background-image: linear-gradient(to left bottom, #8fcbca, #88c3c9, #83bac7, #80
 }
 .callout {
   position: fixed;
-    width: 50%;
+      width: 55%;
+      top: 2%;
+    max-width: 800px;
+
 }
 
 .callout-header {
-  padding: 25px 15px;
+  padding: 25px 0;
   background: #555;
-  font-size: 40px;
+  font-size: 26pt;
   color: white;
   text-align: center;
-
 }
 
 .callout-container {
-  padding: 20px 60px 55px 60px;
+  padding: 10px 60px 30px 60px;
   background-color: #ccc;
   color: black;
   text-align: center;
   text-align: justify;
-  font-size: 26pt;
+  font-size: 25pt;
 }
 
 .closebtn {
@@ -84,15 +118,24 @@ background-image: linear-gradient(to left bottom, #8fcbca, #88c3c9, #83bac7, #80
 /* time */
 .timer-wrapper {
   position: absolute;
-top: 500px;
+top: 90%;
+display: flex;
+justify-content: center;
+
+width: 100%;
+position: absolute;
 }
+
 .timer {
-  width: 150px;
   background-color: #FEC75E;
-  padding: 20px;
-  border: 2px solid #000;
-  border-radius: 10px;
-    text-align: center;
+      padding: 20px;
+      border: 2px solid #000;
+      border-radius: 10px;
+      font-family: 'DotGothic16', sans-serif;
+      font-size: 10pt;
+      max-width: 90%;
+      height: 100%;
+      text-align: center;
 }
 b {
   color: #DC0202;
